--- a/index.html
+++ b/index.html
@@ -37,5 +37,5 @@
 
 		<section id="result" class="result"></section>
 	</body>
-	<script src="script.js"></script>
+	<script src="index.js"></script>
 </html>
